# ManifoldBox

./: CLAUDE.md  README.md  boxy.py  main.py  pyproject.toml
models/: donut.py  foilerParts.py
static/: index.html
