[project]
name = "manifoldbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "manifold3d>=3.2.1",
    "trimesh>=4.7.4",
    "uvicorn[standard]>=0.35.0",
    "watchfiles>=1.1.0",
    "websockets>=15.0.1",
]
